<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trouble_place_choicer_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_tro_pla_cho">

    <android.support.v7.widget.GridLayout
        android:id="@+id/trouble_place_choicer_gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:rowCount="11"
        app:orientation="vertical"
        android:stretchColumns="*">


        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imgButton0"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_columnWeight="1"
            android:visibility="visible"
            android:contentDescription="@string/imgButtonDesc0"
            android:onClick="onClickImageButton0"
            android:background="@drawable/washroom" />
        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imgButton1"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_columnWeight="1"
            android:visibility="visible"
            android:contentDescription="@string/imgButtonDesc1"
            android:onClick="onClickImageButton1"
            android:background="@drawable/callboard" />
        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imgButton2"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_columnWeight="1"
            android:visibility="visible"
            android:contentDescription="@string/imgButtonDesc2"
            android:onClick="onClickImageButton2"
            android:background="@drawable/laundry" />
        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imgButton3"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_columnWeight="1"
            android:visibility="visible"
            android:contentDescription="@string/imgButtonDesc3"
            android:onClick="onClickImageButton3"
            android:background="@drawable/study" />
        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imgButton4"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_columnWeight="1"
            android:visibility="visible"
            android:contentDescription="@string/imgButtonDesc4"
            android:onClick="onClickImageButton4"
            android:background="@drawable/kitchen" />
        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imgButton5"
            app:layout_row="2"
            app:layout_column="1"
            app:layout_columnWeight="1"
            android:visibility="visible"
            android:contentDescription="@string/imgButtonDesc5"
            android:onClick="onClickImageButton5"
            android:background="@drawable/toilet" />
        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imgButton6"
            app:layout_row="3"
            app:layout_column="0"
            app:layout_columnWeight="1"
            android:visibility="visible"
            android:contentDescription="@string/imgButtonDesc6"
            android:onClick="onClickImageButton6"
            android:background="@drawable/smoking" />
        <ImageButton
            android:layout_height="wrap_content"
            android:id="@+id/imgButton7"
            app:layout_row="3"
            app:layout_column="1"
            app:layout_columnWeight="1"
            android:visibility="visible"
            android:contentDescription="@string/imgButtonDesc7"
            android:onClick="onClickImageButton7"
            android:background="@drawable/gym" />

    </android.support.v7.widget.GridLayout>
</RelativeLayout>

